// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeasonStats When stats with wins renders goalie table 1`] = `
<table
  aria-label="customized table"
  class="MuiTable-root css-rqglhn-MuiTable-root"
>
  <thead
    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1wvnaxz-MuiTableCell-root"
        scope="col"
      >
        Season
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        Team
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        GP
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        W
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        L
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        T/OT
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        MIN
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        GA
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        SO
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        GAA
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        SV%
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-132a6sb-MuiTableCell-root"
        scope="row"
      >
        2005 - 2006
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        Chicago Blackhawks
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        2
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        0
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        0
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        1
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        86
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        5
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        5
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        3.47
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        87.80%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`SeasonStats When stats without wins renders skater table 1`] = `
<table
  aria-label="customized table"
  class="MuiTable-root css-rqglhn-MuiTable-root"
>
  <thead
    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1wvnaxz-MuiTableCell-root"
        scope="col"
      >
        Season
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        Team
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        GP
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        G
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        A
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1nslmh4-MuiTableCell-root"
        scope="col"
      >
        PIM
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-132a6sb-MuiTableCell-root"
        scope="row"
      >
        2020 - 2021
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        Chicago Blackhawks
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        19
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        7
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        14
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1bhpkcd-MuiTableCell-root"
      >
        0
      </td>
    </tr>
  </tbody>
</table>
`;
